// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rtl() switches to rtl when the $rtl variable is set to \`true\` 1`] = `
".rtl {
  margin-left: 10px;
  margin-right: 10px;
  border-left: 10px;
  border-right: 10px;
  border-left-width: 10px;
  border-right-width: 10px;
  border-right-color: red;
  border-left-color: blue;
  padding-left: 10px;
  padding-right: 10px;
  left: 10px;
  right: 10px;
}"
`;

exports[`rtl() uses ltr when the $rtl variable is not set 1`] = `
".ltr {
  margin-right: 10px;
  margin-left: 10px;
  border-right: 10px;
  border-left: 10px;
  border-right-width: 10px;
  border-left-width: 10px;
  border-left-color: red;
  border-right-color: blue;
  padding-right: 10px;
  padding-left: 10px;
  right: 10px;
  left: 10px;
}"
`;
